--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     // Updated list of names and corresponding face images with correct file names
     const people = [
       { name: 'Brian', face: 'Brian.jpg' },
-      { name: 'Cam', face: 'Cam.PNG' },
+      { name: 'Cam', face: 'Cam.png' },
       { name: 'Dan', face: 'Dan.jpg' },
       { name: 'Noah', face: 'Noah.jpg' },
       { name: 'Rahul', face: 'Rahul.jpg' },
